fix: align value box area to bottom of card in vertical layout

--- a/inst/components/scss/value_box.scss
+++ b/inst/components/scss/value_box.scss
@@ -29,6 +29,10 @@ $bslib-value-box-enable-shadow: $enable-shadows !default;
         > :last-child { // contents
           grid-area: bottom !important;
         }
+
+        .value-box-area {
+          justify-content: end;
+        }
       }
     }
   }
